tests/error/unIData.uplc
(program 0.0.0 [(builtin unIData) (con data { ByteString #00 })])
